--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,4 +17,6 @@
 	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>   
 	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>    
 
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+
 </manifest> 
