--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,8 @@
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>   
 	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>    
+	<uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"></uses-permission>
+	<uses-permission android:name="android.permission.READ_SYNC_SETTINGS"></uses-permission>
 
 <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 
