--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".LogActivity"/>
+        <activity android:name=".AccessControlActivity"/>
         <activity android:name=".SetupActivity"/>
     </application>
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
