--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="android.tether"
       android:versionCode="4" android:versionName="0.9.3">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:name="TetherApplication" android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name"
                   android:launchMode="singleTask">
@@ -11,16 +11,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LogActivity"/>
+        <activity android:name=".LogActivity" android:launchMode="singleTask"/>
         <activity android:name=".AccessControlActivity" android:launchMode="singleTask"/>
-        <activity android:name=".SetupActivity"/>
+        <activity android:name=".SetupActivity" android:launchMode="singleTask"/>
     </application>
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>   
 	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>    
 	<uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"></uses-permission>
 	<uses-permission android:name="android.permission.READ_SYNC_SETTINGS"></uses-permission>
-
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 </manifest> 
