--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,4 +21,5 @@
 	<uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"></uses-permission>
 	<uses-permission android:name="android.permission.READ_SYNC_SETTINGS"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest> 
