--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,4 +22,5 @@
 	<uses-permission android:name="android.permission.READ_SYNC_SETTINGS"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.INSTALL_PACKAGES"></uses-permission>
 </manifest> 
