--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="android.tether"
       android:versionCode="10" android:versionName="0.9.7.1">
+    <uses-sdk android:minSdkVersion="2" />
     <application android:name="TetherApplication" android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name"
