--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="android.tether"
-      android:versionCode="12" android:versionName="1.52 pre2">
+      android:versionCode="13" android:versionName="1.52">
     <uses-sdk android:minSdkVersion="3" />
     <application android:name="TetherApplication" android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".MainActivity"
