--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="android.tether"
-      android:versionCode="17" android:versionName="1.80-pre3 (N-One)">
-    <uses-sdk android:minSdkVersion="4" />
+      android:versionCode="18" android:versionName="2.0-pre1 (Eclair)">
+    <uses-sdk android:minSdkVersion="5" />
     <application android:name="TetherApplication" android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name"
